Bug 857740: Use MOZ_STATIC_ASSERT instead of COMPILE_ASSERT in convolver.h. r=jrmuizel